[package]
name = "rust-echo-server"
version = "0.1.0"
authors = ["xorphitus <xorphitus@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = "0.1.6"
lazy_static = "1.4.0"
regex = "1"
threadpool = "1.7.1"
